examples/tests/compile_fail/unknown_field_write_fail.zl
struct Point {
    x i32,
    y i32
}

fun main() >> i32 {
    Point p;
    p.zzz = 7;
    return 0;
}
